Fix styling issue because it's not showing up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import "fonts";
+@import "rouge-github";
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@300;400;500;600;700;800&display=swap');
 
 :root {
@@ -126,7 +128,7 @@ hr {
     align-items: center;
     text-align: center;
     position: relative;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.4)), url('/assets/img/hero.jpg');
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.4)), url('assets/img/hero.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
